1. java-GUI开发学习 2.C标准学习

--- a/source/_posts/如何开发小程序.md
+++ b/source/_posts/如何开发小程序.md
@@ -5,40 +5,117 @@ date: 2018-10-11
 categories: wechat
 ---
 
-目录
-
-* [注册](#注册)
-* [添加云开发能力](#添加云开发能力)
-* [代码托管](#代码托管)
-* [框架简介](#框架简介)
-* [小程序开发](#小程序开发)
-* [云开发](#云开发)
-
-<h2 id="注册">注册</h2>
+### 账号注册
 
 * [申请小程序账号](https://mp.weixin.qq.com/wxopen/waregister?action=step1)
 * [登录小程序后台管理](https://mp.weixin.qq.com)
 * [下载开发者工具](https://developers.weixin.qq.com/miniprogram/dev/devtools/download.html?t=18101214)
 
->注意：电脑挂VPN可能导致开发者工具无法登录
+### 小程序基础开发
 
-[参考](https://developers.weixin.qq.com/miniprogram/dev/)
+###### 基本概念
 
-<h2 id="添加云开发能力">添加云开发能力</h2>
+###### 组件使用
 
-微信开发者工具->云开发->添加云环境
+* `tabbar`————[官网参考](https://developers.weixin.qq.com/miniprogram/dev/framework/config.html#tabbar)
 
-<h2 id="代码托管">代码托管</h2>
+如果小程序是一个多 tab 应用（客户端窗口的底部或顶部有 tab 栏可以切换页面），可以通过 tabBar 配置项指定 tab 栏的表现，以及 tab 切换时显示的对应页面
 
-1. 初始化本地Git仓库
-2. 建立远程仓库
-3. 将本地仓库和远程仓库进行连接
+###### 生命周期
 
->问题：将代码拉取到本地环境可能出现异常`refusing to merge unrelated histories`<br>
->原因：Git认为这不是同一个仓库<br>
->解决方案：git pull --allow-unrelated-histories<br>
+* 程序生命周期————[官网参考](https://developers.weixin.qq.com/miniprogram/dev/framework/app-service/app.html)
+  * onLaunch——小程序初始化监听函数
+  * onShow——小程序显示监听函数
+  * onHide——小程序隐藏监听函数
+  * onError——小程序错误监听函数
+  * onPageNotFound——页面找不到监听函数
+* 页面生命周期————[官网参考]()
+  * onLoad		生命周期回调—监听页面加载
+  * onShow		生命周期回调—监听页面显示
+  * onReady		生命周期回调—监听页面初次渲染完成
+  * onHide		生命周期回调—监听页面隐藏
+  * onUnload		生命周期回调—监听页面卸载
+  * onPullDownRefresh		监听用户下拉动作
+  * onReachBottom		页面上拉触底事件的处理函数
+  * onShareAppMessage		用户点击右上角转发
+  * onPageScroll		页面滚动触发事件的处理函数
+  * onResize		页面尺寸改变时触发，详见 响应显示区域变化
+  * onTabItemTap		当前是 tab 页时，点击 tab 时触发
 
-<h2 id="框架简介">框架简介</h2>
+###### 数据绑定渲染
+
+* 数据渲染
+
+  ```html
+  <view> {{message}} </view>
+  ```
+
+* 列表渲染
+
+  ```html
+  <view wx:for="{{array}}" wx:for-index="idx" wx:for-item="itemName">
+    {{idx}}: {{itemName.message}}
+  </view>
+  ```
+
+* 条件渲染
+
+  ```html
+  <view wx:if="{{length > 5}}"> 1 </view>
+  <view wx:elif="{{length > 2}}"> 2 </view>
+  <view wx:else> 3 </view>
+  ```
+
+数据双向绑定
+
+> 因为小程序并没有和vue类似的双向绑定功能，所以我们需要通过setData的方式去模拟双向绑定——[参考链接](https://segmentfault.com/a/1190000015684864)
+
+###### 事件
+
+* touchstart	手指触摸动作开始	
+
+* touchmove	手指触摸后移动	
+
+* touchcancel	手指触摸动作被打断，如来电提醒，弹窗	
+
+* touchend	手指触摸动作结束	
+
+* tap	手指触摸后马上离开	
+
+* longpress	手指触摸后，超过350ms再离开，如果指定了事件回调函数并触发了这个事件，tap事件将不被触发	1.5.0
+
+* longtap	手指触摸后，超过350ms再离开（推荐使用longpress事件代替）	
+
+* transitionend	 动画结束后触发	
+
+* animationstart	会在一个 WXSS animation 动画开始时触发	
+
+* animationiteration	会在一个 WXSS animation 一次迭代结束时触发	
+
+* animationend	会在一个 WXSS animation 动画完成时触发	
+
+* touchforcechange	在支持 3D Touch 的 iPhone 设备，重按时会触发
+
+
+> `bind`事件绑定不会阻止冒泡事件向上冒泡，`catch`事件绑定可以阻止冒泡事件向上冒泡。
+
+###### WXSS
+
+> WXSS是小程序的一套脚本语言，结合 `WXML`，可以构建出页面的结构。————[官网参考](https://developers.weixin.qq.com/miniprogram/dev/framework/view/wxs/)
+
+###### API能力
+
+> TODO
+
+
+
+
+
+> 小程序代码包大小限制在1M内
+
+[教程网站](http://wxopen.club/)
+
+### 框架简介
 
 * 代码构成
   * JSON 配置
@@ -54,7 +131,7 @@ categories: wechat
   * 测试
   * 上线
   
-<h2 id="小程序开发">小程序开发</h2>
+### 小程序开发
 
 * 授权获取
 
@@ -116,12 +193,37 @@ categories: wechat
 	    ]
 	  }  
 
-<h2 id="云开发">云开发</h2>
+### 云开发
+
 >定义：开发者可以使用云开发开发微信小程序、小游戏，无需搭建服务器，即可使用云端能力
 
 * 代码执行 - `云函数`
 * 数据库执行操作 - `云数据库`
-* 文件存储 - `云文件`
+* 文件存储 - `云文件
 
->[参考文档](https://developers.weixin.qq.com/)<br>
->[小程序后台管理](https://mp.weixin.qq.com)<br>
+###### 数据库操作
+
+
+
+> 数据库数据类型：String，Number，Object，Array，Bool，GeoPoint，Date，Null；详见[文档](https://developers.weixin.qq.com/miniprogram/dev/wxcloud/guide/database/data-type.html)
+
+### 其他
+
+###### 引入npm构建功能
+
+> 该功能的前提是本机环境需要有node环境
+
+* `npm init` ———初始化npm构建文件
+* `npm install --production -S js-base64` ———安装js-base64包
+* 点击开发者工具中的菜单栏：工具 --> 构建 npm
+
+###### 引入外部UI框架
+
+* WeUI WXSS
+* iView WeApp
+* ZanUI WeApp
+* MinUI WeApp
+* Wux WeApp
+
+###### 引入iconfont库
+
