修改图片路径

--- a/source/_posts/2018行走计划.md
+++ b/source/_posts/2018行走计划.md
@@ -15,9 +15,9 @@ categories: 随笔
   2. 获取精神上的自由，包括观点的完整性，这就必须让我解决`外语`问题，使我能够获取更为完整的信息
 
 ## 行走路线
-![行走路线](/images/trip.png)
+![行走路线](https://jianjustin.github.io/blog/assets/images/trip.png)
 
-![行走路线](/images/trip1.png)
+![行走路线](https://jianjustin.github.io/blog/assets/images/trip1.png)
 
 ****************************************
 **主要路线:**
