blog source receive

--- a/source/_posts/「算法导论」队列&栈.md
+++ b/source/_posts/「算法导论」队列&栈.md
@@ -82,6 +82,64 @@ categories: 算法
 
 
 
+* 入栈
+
+  ```java
+  public void push(int x) {
+          if(isFull())resize();
+          stack_data[++stack_top] = x;
+          this.stack_deep++;
+      }
+  ```
+
+* 出栈
+
+  ```java
+  public void pop() {
+      	if(isEmpty())return;
+      	stack_data[stack_top--] = 0;
+          this.stack_deep--;
+      }
+  ```
+
+* 获取栈顶元素
+
+  ```java
+  public int top() {
+      	if(isEmpty())return -1;
+  		return stack_data[stack_top];
+      }
+  ```
+
+* 获取最小元素
+
+  ```java
+  public int getMin() {
+      	int m = stack_top,n = stack_deep;
+          int min = -1,k = 0;
+      	while(n>0) {
+      		if(k == 0)min = stack_data[m];
+      		if(stack_data[m] < min)min = stack_data[m];
+      		m--;
+      		n--;
+      		k++;
+      	}
+  		return min;
+      }
+  ```
+
+* 栈扩容
+
+  ```java
+  public void resize() {
+      	int[] stack_new_data = new int[stack_size*2];
+      	for (int i = 0; i < stack_data.length; i++) {
+      		stack_new_data[i] = stack_data[i];
+  		}
+      	this.stack_size = stack_size*2;
+      	stack_data = stack_new_data;
+      }
+  ```
 
 
 
