--- a/source/_posts/面试题汇总.md
+++ b/source/_posts/面试题汇总.md
@@ -5,55 +5,66 @@ date: 2018-06-24
 categories: 收藏夹
 ---
 
-面试题集：
 
-* [java面试题](#java面试题)
-* [前端面试题](#前端面试题)
-* [算法面试题](#算法面试题)
-* [其他](#其他)
+#### java面试题
 
-<h3 id="java面试题">java面试题</h3>
+* Java基础
 
-1. **基本数据类型以及String类型是否可变**
+    * 受检异常和非受检异常区别
+    * 强引用，软引用，弱引用，虚引用的区别
+    * 包装类实现原理
+    * 动态代理实现原理
+    * BIO，NIO，AIO以及多路复用的实现原理
+    * List和Set的区别
+    * 类加载机制
+    * 深克隆和浅克隆的差异和原理
+    * 如何将对象序列化到文件
 
-  基本数据类型包括:boolean,byte,short,int,long,float,double,char
+* Java多线程
+
+    * 如何停止一个线程
+    * Thread.Join的实现原理
+    * volatile关键字
+    * synchronized实现原理
+    * 线程池实现原理
+    * ThreadLocal是什么
+    * 从内核层面分析原子性，可见性，有序性产生原因
+    * AtomicInteger底层实现原理
+
+
+* 分布式架构
   
+    * 缓存穿透的原理及解决方案
+    * 数据库和缓存的数据一致性如何保证
+    * 什么是幂等
+    * dubbo+zookeeper的实现原理
+    * 分库分表实现
+
+* 应用开发
   
-2. **消息队列的实现机制**
-  1. 通讯模式包括:点对点通讯,多点广播,发布/订阅模式,群集
-  2. 通讯过程:消息生产--消息发送--消息入队列--消息消费--消息消费结果反馈--删除消息
+    * spring bean的生命周期和作用域
+    * spring中对象注入的几种方式和区别  
+
+* 数据库原理
+
+    * 乐观锁和悲观锁原理和应用场景
+    * mysql数据库的隔离级别及其区别
+    * mysql自增主键的设计原理
+    * MYISAM和INNODB的区别
+    * 行锁和表锁的区别
 
 
-3. **缓存框架原理,如何使用redis**<br>
-  redis特点:
-  1. 支持多数据类型存储
-  2. 可进行分布式管理
-
-4. **hibernate的三级缓存**
-5. **Spring的特性及其原理**
-6. **什么是回调地狱,如何改进代码**<br>
-　　---回调地狱指多个函数嵌套调用,可以通过代码模块化以及函数提升的方式去改进。
-
-7. **mysql锁机制--乐观锁和悲观锁**
-  1. 乐观锁指通过版本号的方式在修改数据时判断数据是否已过期
-  2. 悲观锁则是在获取数据时加锁，保证数据不会被其他线程修改
 
 
-8. **线程和进程比较**
-  1. 概念:进程是系统进行资源分配和调度的一个独立单位;而线程则是CPU调度和分派的基本单元
 
-9. **post请求和get请求的区别**
-10. **hibernate如何开启多事务**
-11. **事务的传播机制**
-12. **hibernate的三级缓存机制**
-13. **aop实现机制**
-14. **抽象类和接口的区别**
-15. **hashMap的key是否可以为空**
-16. **跨域解决方式**
-17. **mybatis的dao接口工作原理**
-18. **mybatis分页插件实现原理**
 
-<h3 id="前端面试题">前端面试题</h3>
+
+
+
+
+
+
+#### 前端面试题 
 
 1. Doctype作用？严格模式与混杂模式如何区分？它们有何意义
 2. HTML5 为什么只需要写doctype 
@@ -78,11 +89,11 @@ categories: 收藏夹
 
 8. 请描述一下 cookies，sessionStorage 和 localStorage 的区别？
 
-<h3 id="算法面试题">算法面试题</h3>
+#### 算法面试题
 
 1. 各种排序的时间复杂度和空间复杂度
 
-<h3 id="其他">其他</h3>
+#### 其他
 
 1. **事务的隔离级别**
   1. read uncommitted(脏读)
