--- a/source/_posts/网址汇总.md
+++ b/source/_posts/网址汇总.md
@@ -2,66 +2,147 @@
 layout: post
 title: 网址汇总
 date: 2018-06-24
-categories: 收藏夹
+categories: tools
 ---
 
 * 技术
+
   * git&github
+
     * [git使用教程](https://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000)
     * [github收藏集](https://github.com/AntBranch/awesome-github)
     * [git使用指南](https://progit.bootcss.com)
     * [git常用命令](http://www.ruanyifeng.com/blog/2015/12/git-cheat-sheet.html)
     * [gitbook教程](https://toolchain.gitbook.com/)
+
   * markdown
+
     * [markdown基础语法](https://www.appinn.com/markdown/)
+
   * 区块链
+
     * [bitconnect](https://bitconnect.co)
-    * [数字货币买卖](https://localbitcoins.com/zh-cn/)
-    * [算力统计](https://btc.com/)
-    * [巴比特-中文区块链社区](http://www.8btc.com/)
+    * [localbitcoins-数字货币买卖](https://localbitcoins.com/zh-cn)
+    * [算力统计](https://btc.com)
+    * [巴比特-中文区块链社区](http://www.8btc.com)
     * [椭圆曲线加密](http://8btc.com/article-138-1.html)
-    * [金融市场趋势](https://cn.tradingview.com/)
+    * [金融市场趋势](https://cn.tradingview.com)
+    * [股票投资观点](https://cn.tradingview.com)
+    * [区块链入门指南](https://daimajia.com/2017/08/24/how-to-start-blockchain-learning)
+    * [区块链教程](https://learnblockchain.cn/2018/01/11/guide)
+
   * linux
+
     * [linux收藏夹](https://github.com/0xE8551CCB/awesome-linux-software-cn)
+
   * 数据库
+
     * [MongoDB教程](http://www.runoob.com/mongodb/mongodb-tutorial.html)
     * [Presto-大数据查询引擎](http://prestodb-china.com/)
     * [数据库版本管理flyway](http://qinghua.github.io/flyway/)
+
   * C语言
+
     * [C环境设置](http://www.runoob.com/cprogramming/c-environment-setup.html)
     * [C标准库](http://www.runoob.com/cprogramming/c-standard-library-math-h.html)
     * [浙江大学ACM题库](http://acm.zju.edu.cn/onlinejudge/)
     * [ACM书籍推荐](http://www.cnblogs.com/samjustin/articles/4563734.html)
-  * JSON
-    * [gson](https://github.com/google/gson)
-    * [fastson](https://github.com/alibaba/fastjson)
-    * [jackson](https://github.com/FasterXML/jackson)
+    * [C算法库学习](https://github.com/eddyerburgh/c-sorting-algorithms)
+
   * 前端
+
     * [devdocs-前端文档库](http://devdocs.io)
     * [atom使用指南](https://wizardforcel.gitbooks.io/atom-flight-manual-zh-cn/content/2.11-Version-Control-in-Atom.html)
     * [前端知识体系](https://www.gitbook.com/book/sqrtthree/front-end-handbook-2017/details)
     * [前端知识导航](http://www.daqianduan.com/nav)
-    * [前端资源库](https://www.awesomes.cn/)
+    * [前端资源库](https://www.awesomes.cn)
     * [HTML5题库](https://codepen.io/EleftheriaBatsou/full/oBXqqx)
-    * [HTML文档](https://webplatform.github.io/docs/html/)
-    * [HTML5案例](https://html5up.net/)
+    * [HTML文档](https://webplatform.github.io/docs/html)
+    * [HTML5案例](https://html5up.net)
+
   * css
+
     * [css布局案例](http://www.oschina.net/news/26927/css-layouts-40-tutorials-tips-demos-and-best-practices)
     * [css常见布局](http://blog.bingo929.com/43-div-css-psd-xhtml-css.html)
     * [semantic-ui](http://www.semantic-ui.cn/usage/theming.html)
+
   * java
+
     * [java资源大全](https://github.com/jobbole/awesome-java-cn#ancients)
-    * [网络爬虫](http://hao.jobbole.com/category/java/java-web-crawling/)
+    * [网络爬虫](http://hao.jobbole.com/category/java/java-web-crawling)
     * [IDEA使用指南](https://www.gitbook.com/book/dancon/intellij-idea/details)
     * [天梯-CMS解决方案](https://github.com/xujeff/tianti)
+
   * 构建工具
+
     * [ant教程](https://www.w3cschool.cn/ant/m24b1hwf.html)
-    * [maven教程](https://ayayui.gitbooks.io/tutorialspoint-maven/content/)
+    * [maven教程](https://ayayui.gitbooks.io/tutorialspoint-maven/content)
+
   * 算法
+
     * [算法题库-计蒜客](https://www.jisuanke.com/course)
+
 * 资源
+
+  * 图片
+
+    * [streetwill](http://streetwill.co)
+    * [pexels](https://www.pexels.com)
+    * [unsplash](https://unsplash.com)
+    * [splitshire](https://www.splitshire.com)
+
+  * 软件外包
+
+    * [软件项目交易网](https://www.sxsoft.com)
+    * [软件商务网](http://www.bizsofts.com)
+    * [实现网](https://shixian.com)
+
+  * 中文个人博客
+
+    * [技术胖](https://jspang.com)
+    * [白日造梦者](https://www.cyj.me)
+    * [在线技术教程](https://www.tutorialspoint.com/index.htm)
+    * [后端技术杂谈](http://www.rowkey.me)
+    * [小威架构](https://gitee.com/zhang.w)
+    * [百度EFE](https://efe.baidu.com/blog)
+    * [Jack Frost](http://www.fuzhufuzhu.com)
+    * [cyningsun](http://cyningsun.github.io)
+    * [田守枝](http://www.tianshouzhi.com)
+
+  * 英文个人博客
+
+    * [kamranahmed](https://kamranahmed.info)
+    * [adnanahmed](https://adnanahmed.info)
+    * [tumblr](http://rsms.tumblr.com)
+    * [粉丝日志](http://blog.fens.me)
+    * [fvsch](https://fvsch.com)
+
+  * 互联网公司招聘
+
+    * [浪潮集团](http://career.inspur.com/cwbase/web/recportal/campus2019/index.html)
+    * [麦客](https://cn.mikecrm.com/MmpHuw9)
+    * [极米科技](https://www.xgimi.com/hr/1.html)
+    * [interviewing.io](https://interviewing.io)
+
+  * 股票量化投资
+
+    * [tradimo](https://learn.tradimo.com)
+    * [刀客之家](http://www.ouyuanquan.com)
+    * [量化学习资源](https://www.ricequant.com/community/topic/47/)
+
 * 工具
+
   * navicat
+
     * [navicat安装指南](https://www.jianshu.com/p/42a33b0dda9c)
+
   * IDEA
-    * [IDEA注册码](http://idea.lanyus.com/)
+
+    * [IDEA注册码](http://idea.lanyus.com)
+
+  * 常用网站
+  
+    * [coggle](https://coggle.it)
+    * [leangoo-项目看板管理](https://www.leangoo.com/kanban/mindmap/index/2647459/21138a7026e75589b6bb0874a90db5ee#)
+    * [md2All](http://md.aclickall.com)
+    * [五百丁](http://www.500d.me/editresume)
