修改文章排版

--- a/source/_posts/「算法导论」概述.md
+++ b/source/_posts/「算法导论」概述.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 算法导读
+title: 「算法导论」概述
 date: 2018-04-25
-categories: algorithm-notes
+categories: 技术
 ---
 
 ## Introduction
