--- a/source/_posts/「算法导论」排序算法.md
+++ b/source/_posts/「算法导论」排序算法.md
@@ -2,7 +2,7 @@
 layout: post
 title: 「算法导论」排序算法
 date: 2019-01-21
-categories: 算法
+categories: 技术
 ---
 
 今天这篇文章，主要是探索一下排序算法这个万年不变的话题；希望大家能够看到后提点建议出来哟
