--- a/source/_posts/面试题汇总.md
+++ b/source/_posts/面试题汇总.md
@@ -8,60 +8,49 @@ categories: 收藏夹
 
 #### java面试题
 
-* Java基础
+###### Java基础
 
-    * 受检异常和非受检异常区别
-    * 强引用，软引用，弱引用，虚引用的区别
-    * 包装类实现原理
-    * 动态代理实现原理
-    * BIO，NIO，AIO以及多路复用的实现原理
-    * List和Set的区别
-    * 类加载机制
-    * 深克隆和浅克隆的差异和原理
-    * 如何将对象序列化到文件
+* 受检异常和非受检异常区别
+* 强引用，软引用，弱引用，虚引用的区别
+* 包装类实现原理
+* 动态代理实现原理
+* BIO，NIO，AIO以及多路复用的实现原理
+* List和Set的区别
+* 类加载机制
+* 深克隆和浅克隆的差异和原理
+* 如何将对象序列化到文件
 
-* Java多线程
+###### Java多线程
 
-    * 如何停止一个线程
-    * Thread.Join的实现原理
-    * volatile关键字
-    * synchronized实现原理
-    * 线程池实现原理
-    * ThreadLocal是什么
-    * 从内核层面分析原子性，可见性，有序性产生原因
-    * AtomicInteger底层实现原理
+* 如何停止一个线程
+* Thread.Join的实现原理
+* volatile关键字
+* synchronized实现原理
+* 线程池实现原理
+* ThreadLocal是什么
+* 从内核层面分析原子性，可见性，有序性产生原因
+* AtomicInteger底层实现原理
 
+###### 分布式架构
 
-* 分布式架构
-  
-    * 缓存穿透的原理及解决方案
-    * 数据库和缓存的数据一致性如何保证
-    * 什么是幂等
-    * dubbo+zookeeper的实现原理
-    * 分库分表实现
+* 缓存穿透的原理及解决方案
+* 数据库和缓存的数据一致性如何保证
+* 什么是幂等
+* dubbo+zookeeper的实现原理
+* 分库分表实现
 
-* 应用开发
-  
-    * spring bean的生命周期和作用域
-    * spring中对象注入的几种方式和区别  
+###### 应用开发
 
-* 数据库原理
+* spring bean的生命周期和作用域
+* spring中对象注入的几种方式和区别  
 
-    * 乐观锁和悲观锁原理和应用场景
-    * mysql数据库的隔离级别及其区别
-    * mysql自增主键的设计原理
-    * MYISAM和INNODB的区别
-    * 行锁和表锁的区别
+###### 数据库原理
 
-
-
-
-
-
-
-
-
-
+* 乐观锁和悲观锁原理和应用场景
+* mysql数据库的隔离级别及其区别
+* mysql自增主键的设计原理
+* MYISAM和INNODB的区别
+* 行锁和表锁的区别
 
 
 #### 前端面试题 
