--- a/source/_posts/书籍汇总.md
+++ b/source/_posts/书籍汇总.md
@@ -5,246 +5,164 @@ date: 2018-06-24
 categories: 收藏夹
 ---
 
-* 技术
-
+1. 技术
   * java
-
-     * **java核心技术**
-     * **java编程思想**
-     * **Thinking in java**
-     * **企业应用架构模式**
-     * **深入分析java Web技术内幕**
-     * **HotSpot实战**
-     * **Java技术手册**
-     * **Java并发编程实战**
-     * **java多线程编程核心技术**
-     * **从Paxos到ZooKeeper 分布式一致性原理与实践**
-     * **全端Web开发：使用JavaScript与Java**
-     * **Java性能权威指南**
-     * **Java 8实战**
-     * **Java 8函数式编程**
-     * **分布式服务框架原理与实践**
-
+     1. **java核心技术**
+     2. **java编程思想**
+     3. **Thinking in java**
+     4. **企业应用架构模式**
+     5. **深入分析java Web技术内幕**
+     6. **HotSpot实战**
+     7. **Java技术手册**
+     8. **Java并发编程实战**
+     9. **java多线程编程核心技术**
+     10. **从Paxos到ZooKeeper 分布式一致性原理与实践**
+     11. **全端Web开发：使用JavaScript与Java**
+     12. **Java性能权威指南**
+     13. **Java 8实战**
+     14. **Java 8函数式编程**
+     15. **分布式服务框架原理与实践**
   * javaScript
-
-     * **你不知道的JavaScript**
-     * **精通JavaScript开发**
-     * **JSON必知必会**
-     * **JavaScript异步编程：设计快速响应的网络应用**
-     * **深入浅出CoffeeScript**
-     * **JavaScript修炼之道**
-     * **JavaScript高级程序设计**
-     * **JavaScript DOM编程艺术**
-     * **锋利的jQuery**
-     * **JavaScript权威指南**
-     * **JavaScript语言精粹**
-     * **javaScript标准库**
-     * **精通Node.js**
-
+     1. **你不知道的JavaScript**
+     2. **精通JavaScript开发**
+     3. **JSON必知必会**
+     4. **JavaScript异步编程：设计快速响应的网络应用**
+     5. **深入浅出CoffeeScript**
+     6. **JavaScript修炼之道**
+     7. **JavaScript高级程序设计**
+     8. **JavaScript DOM编程艺术**
+     9. **锋利的jQuery**
+     10. **JavaScript权威指南**
+     11. **JavaScript语言精粹**
+     12. **javaScript标准库**
+     13. **精通Node.js**
   * CoffeeScript
-
   * python
-
-    * **Python源码剖析**
-    * **Python学习手册**
-    * **Python 基础教程**
-    * **Python算法教程**
-    * **Python官方手册**
-    * **Python Cookbook**
-    * **Python绝技:运用Python成为顶级黑客**
-
+    1. **Python源码剖析**
+    2. **Python学习手册**
+    3. **Python 基础教程**
+    4. **Python算法教程**
+    5. **Python官方手册**
+    6. **Python Cookbook**
+    7. **Python绝技:运用Python成为顶级黑客**
   * c++
-
   * Go
-
   * C语言
-
-    * **c语言程序设计**
-    * **c陷阱和缺陷**
-    * **c专家编程**
-    * **linux C函数参考手册**
-
+    1. **c语言程序设计**
+    2. **c陷阱和缺陷**
+    3. **c专家编程**
+    4. **linux C函数参考手册**
   * Lisp
-
   * jvm
-
-    * **深入理解java虚拟机**
-
+    1. **深入理解java虚拟机**
   * spring
-
-    * **Spring源码深度解析**
-    * **Spring实战**
-    * **Spring高级程序设计**
-    * **Spring Boot实战**
-
+    1. **Spring源码深度解析**
+    2. **Spring实战**
+    3. **Spring高级程序设计**
+    4. **Spring Boot实战**
   * hibernate
-
-    * **Hibernate实战**
-
+    1. **Hibernate实战**
   * maven
-
-    * **maven权威指南**
-
+    1. **maven权威指南**
   * 版本管理
-
-    * **Git版本控制管理**  
-
+    1. **Git版本控制管理**  
   * 消息队列(`ActiveMq`)
-
-    * **RabbitMQ实战**
-
+    1. **RabbitMQ实战**
   * 缓存
-
-    * **redis设计与实现**
-
+    1. **redis设计与实现**
   * 权限框架(`Spring Security`,`Shiro`,`cl-privilege`)
-
-    * **跟我学shiro**
-
+    1. **跟我学shiro**
   * 基础工具(`Commons-lang`,`Guava`)
-
   * ESB服务总线(`ServiceMix`,`MBassador`)
-
   * 工作流(`Oozie`,`Apache Agila`,`Activiti`)
-
-    * **SOA核心技术及应用**
-    * **soa原理·方法·实践**
-    * **Activiti实战**
-
+    1. **SOA核心技术及应用**
+    2. **soa原理·方法·实践**
+    3. **Activiti实战**
   * 搜索框架(`solr`)
-
-    * **solr实战**
-
+    1. **solr实战**
   * RestAPI(`Swagger UI`)
-
-    * **RESTful Web APIs中文版**
-    * **OAuth 2 in Action**
-
+    1. **RESTful Web APIs中文版**
+    2. **OAuth 2 in Action**
   * 文件管理(`fastdfs`)
-
-    * **深入浅出fastDFS**
-
+    1. **深入浅出fastDFS**
   * 代码质量管理(`sonarqube`)
-
   * 静态网页生成(`jekyII`)
-
-    * **代码质量**
-
+    1. **代码质量**
   * 静态网页生成(`jekyII`,`WordPress`)
-
   * 持续集成(`hudson`,`jenkins`)
-
-    * **jenkins权威指南**
-
+    1. **jenkins权威指南**
   * 数据库(`Kettle--数据转换工具`)
-
-    * **高性能MySQL**
-    * **深入解析SQL Server 2008**
-    * **MySQL技术内幕:InnoDB存储引擎**
-    * **MySQL排错指南**
-    * **高性能MySQL**
-    * **数据库索引设计与优化**
-    * **深入MySQL源码**
-    * **深入理解MySQL核心技术**
-    * **MariaDB原理与实现**
-
+    1. **高性能MySQL**
+    2. **深入解析SQL Server 2008**
+    3. **MySQL技术内幕:InnoDB存储引擎**
+    4. **MySQL排错指南**
+    5. **高性能MySQL**
+    6. **数据库索引设计与优化**
+    7. **深入MySQL源码**
+    8. **深入理解MySQL核心技术**
+    9. **MariaDB原理与实现**
   * 算法
-
-    * **数据结构与算法分析**
-    * **算法设计与分析基础**
-    * **算法引论**
-    * **Elements of Programming**
-    * **Language Implementation Patterns**
-    * **Algorithms on Strings, Trees and Sequences**
-    * **Writing Efficient Programs**
-    * **Algorithm Design Manual**
-    * **programming pearls**
-    * **more programming pearls**
-    * **The Science of Programming**
-    * **Algorithms 4th**
-    * **Advanced Data Structures**
-
+    1. **数据结构与算法分析**
+    2. **算法设计与分析基础**
+    3. **算法引论**
+    4. **Elements of Programming**
+    5. **Language Implementation Patterns**
+    6. **Algorithms on Strings, Trees and Sequences**
+    7. **Writing Efficient Programs**
+    8. **Algorithm Design Manual**
+    9. **programming pearls**
+    10. **more programming pearls**
+    11. **The Science of Programming**
+    12. **Algorithms 4th**
+    13. **Advanced Data Structures**
   * 架构设计
-
-    * **领域驱动设计和模式实战**
-    * **重构-改善既有代码的设计**
-
+    1. **领域驱动设计和模式实战**
+    2. **重构-改善既有代码的设计**
   * 区块链
-
   * 数据分析
-
-    * **数据挖掘 概念与技术**
-    * **Docker技术入门与实战**
-    * **Spark大数据分析实战**
-    * **Hadoop权威指南**
-
+    1. **数据挖掘 概念与技术**
+    2. **Docker技术入门与实战**
+    3. **Spark大数据分析实战**
+    4. **Hadoop权威指南**
   * linux
-
-    * **鸟哥的Linux私房菜**
-    * **Linux系统管理技术手册**
-    * **LINUX内核设计与实现**
-    * **unix网络编程**
-    * **unix环境高级编程**
-    * **深入Linux内核架构**
-    * **Linux内核情景分析**
-
+    1. **鸟哥的Linux私房菜**
+    2. **Linux系统管理技术手册**
+    3. **LINUX内核设计与实现**
+    4. **unix网络编程**
+    5. **unix环境高级编程**
+    6. **深入Linux内核架构**
+    7. **Linux内核情景分析**
   * window
-
-    * **深入解析Windows操作系统**
-    * **深入理解计算机系统**
-
+    1. **深入解析Windows操作系统**
+    2. **深入理解计算机系统**
   * html/css
-
   * TCP/IP
-
-    * **TCP/IP详解**
-    * **HTTP权威指南**
-
+    1. **TCP/IP详解**
+    2. **HTTP权威指南**
   * web服务器(`nginx`,`tomcat`,`jboss`)
-
   * 编程方法论
-
   * 高等数学
-
-    * **托马斯微积分**
-    * **微积分和数学分析引论**
-    * **普林斯顿微积分读本**
-
+    1. **托马斯微积分**
+    2. **微积分和数学分析引论**
+    3. **普林斯顿微积分读本**
   * 中间件(`zookeeper`服务配置)
-
   * DevOps
-
   * 密码学
-
   * 爬虫(`Nutch`,`Heritrix`)
-
-* 微服务
-
+2. 微服务
   * API网关
-
   * 安全认证
-
   * 服务间通信
-
   * 虚拟云docker
-
-* 语言
-
-* 杂志
-
-* 政治
-
-* 人文社科
-
+3. 语言
+4. 杂志
+5. 政治
+6. 人文社科
   * **奇点临近**
-
-* 小说
-
+7. 小说
   * **微妙的平衡**
   * **向伯利恒跋涉**
-
-* 源码阅读
-
+8. 源码阅读
   * **Chromium**
   * **spring**
   * **unix**
