--- a/source/_posts/面试题汇总.md
+++ b/source/_posts/面试题汇总.md
@@ -5,78 +5,72 @@ date: 2018-06-24
 categories: 收藏夹
 ---
 
-
 #### java面试题
 
-###### Java基础
+1. Java基础 
 
-* 受检异常和非受检异常区别
-* 强引用，软引用，弱引用，虚引用的区别
-* 包装类实现原理
-* 动态代理实现原理
-* BIO，NIO，AIO以及多路复用的实现原理
-* List和Set的区别
-* 类加载机制
-* 深克隆和浅克隆的差异和原理
-* 如何将对象序列化到文件
+    * 受检异常和非受检异常区别
+    * 强引用，软引用，弱引用，虚引用的区别
+    * 包装类实现原理
+    * 动态代理实现原理
+    * BIO，NIO，AIO以及多路复用的实现原理
+    * List和Set的区别
+    * 类加载机制
+    * 深克隆和浅克隆的差异和原理
+    * 如何将对象序列化到文件
 
-###### Java多线程
+2. Java多线程
 
-* 如何停止一个线程
-* Thread.Join的实现原理
-* volatile关键字
-* synchronized实现原理
-* 线程池实现原理
-* ThreadLocal是什么
-* 从内核层面分析原子性，可见性，有序性产生原因
-* AtomicInteger底层实现原理
+    * 如何停止一个线程
+    * Thread.Join的实现原理
+    * volatile关键字
+    * synchronized实现原理
+    * 线程池实现原理
+    * ThreadLocal是什么
+    * 从内核层面分析原子性，可见性，有序性产生原因
+    * AtomicInteger底层实现原理
 
-###### 分布式架构
+3. 分布式架构
 
-* 缓存穿透的原理及解决方案
-* 数据库和缓存的数据一致性如何保证
-* 什么是幂等
-* dubbo+zookeeper的实现原理
-* 分库分表实现
+    * 缓存穿透的原理及解决方案
+    * 数据库和缓存的数据一致性如何保证
+    * 什么是幂等
+    * dubbo+zookeeper的实现原理
+    * 分库分表实现
 
-###### 应用开发
+4. 应用开发
 
-* spring bean的生命周期和作用域
-* spring中对象注入的几种方式和区别  
+    * spring bean的生命周期和作用域
+    * spring中对象注入的几种方式和区别  
 
-###### 数据库原理
+5. 数据库原理
 
-* 乐观锁和悲观锁原理和应用场景
-* mysql数据库的隔离级别及其区别
-* mysql自增主键的设计原理
-* MYISAM和INNODB的区别
-* 行锁和表锁的区别
+    * 乐观锁和悲观锁原理和应用场景
+    * mysql数据库的隔离级别及其区别
+    * mysql自增主键的设计原理
+    * MYISAM和INNODB的区别
+    * 行锁和表锁的区别
 
+#### 前端面试题
 
-#### 前端面试题 
-
-1. Doctype作用？严格模式与混杂模式如何区分？它们有何意义
-2. HTML5 为什么只需要写doctype 
-3. 行内元素有哪些？块级元素有哪些？ 空(void)元素有那些？
-4. link和@import的区别
-   * link属于XHTML标签，而@import完全是CSS提供的一种方式
-   * 加载顺序的差别。当一个页面被加载的时候，link引用的CSS会同时被加载，而@import引用的CSS 会等到页面全部被下载完再被加载
-   * 兼容性的差别：@import只有在IE5以上的才能识别
-   * 当使用javascript控制dom去改变样式的时候，只能使用link标签，因为@import不是dom可以控制的
-
-5. 浏览器内核有哪些？各个浏览器内核的区别？
-6. 什么是HTML语义化？
-
-   Web语义化是指使用恰当语义的html标签、class类名等内容，让页面具有良好的结构与含义，从而让人和机器都能快速理解网页内容
-   
-7. 什么是HTML5的离线存储？
-
-   部分HybridApp和WebApp通过HTML5技术进行开发，导致用户无法在离线状态下使用app，通过离线存储，我们可以通过把需要离线存储在本地的文件列在一个manifest配置文件中，这样即使在离线的情况下，用户也可以正常使用App
-   * `CACHE`:表示需要离线存储的资源列表
-   * `NETWORK`:表示在它下面列出来的资源只有在在线的情况下才能访问，他们不会被离线存储
-   * `FALLBACK`:表示如果访问第一个资源失败，那么就使用第二个资源来替换他
-
-8. 请描述一下 cookies，sessionStorage 和 localStorage 的区别？
+1. HTML部分
+   * Doctype作用？严格模式与混杂模式如何区分？它们有何意义
+   * HTML5 为什么只需要写doctype 
+   * 行内元素有哪些？块级元素有哪些？ 空(void)元素有那些？
+   * 什么是HTML语义化
+   * 什么是HTML5的离线存储？
+2. CSS部分
+   * 使元素不可见的几种方式
+3. JavaScript部分
+4. 前端SEO部分
+5. HTTP部分
+   * HTTP的request报文结构是怎样的
+   * HTTP的response报文结构
+   * HTTP状态码及其含义
+6. 其他
+   * link和@import的区别
+   * 浏览器内核有哪些？各个浏览器内核的区别？
+   * 请描述一下 cookies，sessionStorage 和 localStorage 的区别？
 
 #### 算法面试题
 
@@ -85,33 +79,19 @@ categories: 收藏夹
 #### 其他
 
 1. **事务的隔离级别**
-  1. read uncommitted(脏读)
-  2. read committed(不可重复读)
-  3. repeatable read(幻读)
-  4. serializable(串行化)
+   * read uncommitted(脏读)
+   * read committed(不可重复读)
+   * repeatable read(幻读)
+   * serializable(串行化)
 
 
 2. **mysql存储引擎区别**<br>
 mysql引擎主要使用InnoDB和MyISAM两种,其区别包括:
-  1. 构成上的区别:MyISAM储存表定义,数据文件,索引文件这三个文件,而InnoDB则存储空间数据文件和日志文件
-  2. MyISAM不提供事务级处理
-  3. MyISAM更适合大量查询操作
-  4. InnoDB不保存表总行数
-  5. MyISAM只用表锁,InnoDB则包含行级锁
-
-
-3. **AOP的使用场景**
-  1. 性能监控,记录方法执行时间
-  2. 缓存代理
-  3. 日志输出
-  4. 工作流系统
-  5. 权限验证
-  6. 事务管理,包括声明式配置和注解式配置
-
-
-4. **SQL优化**
-  1. 添加数据库表索引
-  2. 减少劣质SQL语句
-
-5. **共享锁和排他锁的区别**
-6. **死锁的出现和解决方式**
+   * 构成上的区别:MyISAM储存表定义,数据文件,索引文件这三个文件,而InnoDB则存储空间数据文件和日志文件
+   * MyISAM不提供事务级处理
+   * MyISAM更适合大量查询操作
+   * InnoDB不保存表总行数
+   * MyISAM只用表锁,InnoDB则包含行级锁
+  
+3. **共享锁和排他锁的区别**
+4. **死锁的出现和解决方式**
